# mintools

./: .clang-format  README.md  argparse.hpp  meson.build
include/: argparse.hpp  tinytest.hpp
python/: speedtest.py
test/: meson.build  temp.cpp  test-1.cpp  test.cpp  timeit.cpp
